--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     { username: 'salsadila', pin: 'salsadila05' },
                 ],
                 catalog: [
-                    { name: 'Kacamata', price: 15000, image: 'https://shorturl.at/zbRdB' },
-                    { name: 'Ikat Rambut', price: 10000, image: 'https://shorturl.at/75lMX' },
+                    { name: 'Kacamata', price: 15000, image: 'https://acesse.one/eDG42' },
+                    { name: 'Ikat Rambut', price: 10000, image: 'https://l1nk.dev/1Lx7U' },
                     { name: 'Headphones', price: 150000, image: 'https://acesse.one/b0CDv' },
                     { name: 'Kipas Angin Mini', price: 60000, image: 'https://acesse.one/rpUlR' },
                 ],
