--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     { name: 'Kacamata', price: 15000, image: 'https://acesse.one/eDG42' },
                     { name: 'Ikat Rambut', price: 10000, image: 'https://l1nk.dev/1Lx7U' },
                     { name: 'Headphones', price: 150000, image: 'https://acesse.one/b0CDv' },
-                    { name: 'Kipas Angin Mini', price: 60000, image: 'https://acesse.one/rpUlR' },
+                    { name: 'Kipas Angin Mini', price: 60000, image: 'https://acesse.one/rpUlR' }
                 ],
             },
             // View untuk tampilan
