--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,10 +19,10 @@
                     { username: 'salsadila', pin: 'salsadila05' },
                 ],
                 catalog: [
-                    { name: 'Kacamata', price: 15000, image: 'https://acesse.one/eDG42' },
-                    { name: 'Ikat Rambut', price: 10000, image: 'https://l1nk.dev/1Lx7U' },
+                    { name: 'Kacamata', price: 15000, image: 'https://via.placeholder.com/150?text=Kacamata' },
+                    { name: 'Ikat Rambut', price: 10000, image: 'https://via.placeholder.com/150?text=Ikat+Rambut' },
                     { name: 'Headphones', price: 150000, image: 'https://acesse.one/b0CDv' },
-                    { name: 'Kipas Angin Mini', price: 60000, image: 'https://acesse.one/rpUlR' }
+                    { name: 'Kipas Angin Mini', price: 60000, image: 'https://acesse.one/rpUlR' },
                 ],
             },
             // View untuk tampilan
@@ -40,6 +40,7 @@
                 catalog: function () {
                     const items = pbo.model.catalog.map(item => `
                         <div class="catalog-item">
+                            <img src="${item.image}" alt="${item.name}">
                             <h3>${item.name}</h3>
                             <p>Rp ${item.price.toLocaleString()}</p>
                         </div>
