--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 catalog: [
                     { name: 'Kacamata', price: 15000, image: 'https://id.pinterest.com/pin/910571618471405006/' },
                     { name: 'Ikat Rambut', price: 10000, image: 'https://id.pinterest.com/pin/910571618534409900/' },
-                    { name: 'Headphones', price: 150000, image: 'https://id.pinterest.com/pin/216032113369956578/' },
+                    { name: 'Headphones', price: 150000, image: 'https://acesse.one/b0CDv' },
                     { name: 'Kipas Angin Mini', price: 60000, image: 'https://id.pinterest.com/pin/164381455144700281/' },
                 ],
             },
